assets/css/neverMissAnUpdate.css
.neverMissUpdate {
  width: 100vw;
  height: auto;
  display: flex;
  justify-content: center;
  background-color: whitesmoke;
}
.neverMissUpdateContainer h1 {
  font-size: 40px;
}
.neverMissUpdateContainer {
  height: 500px;
  width: 440px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.neverMissUpdateContainer i {
  font-size: 65px;
  color: #2c86fc;
}

.neverMissUpdateContainer h2 {
  font-size: 18px;
}
.neverMissUpdateContainer h3 {
  color: whitesmoke;
}

.neverMissUpdateContainer h1,
h2,
form,
h5 {
  text-align: center;
  margin-top: 20px;
}

.update-heading {
  font-weight: 600;
}

#neverMissUpdateemail {
  font-style: italic;
  font-weight: 900;
  color: black;
  font-size: 15px;
  width: 550px;
}

#button-addon2 {
  border: none;
  padding-left: 20px;
  background-color: #2c86fc;
}

h2 {
  color: black;
  opacity: 0.5;
}

.update-heading {
  opacity: 0.9;
}

